# AgentOrg

./: .gitignore  CAVEMAN_BENCHMARK.md  CHANGELOG.md  README.md  RELEASE.md  SWE_BENCH_RESULT.md  pyproject.toml  start.sh
agentorg/: __init__.py  cli.py  environment.py  init_flow.py  scaffold.py  validator.py
agentorg/agents/: architect.md  cto.md  devops-ci.md  devops-deploy.md  devops-lead.md  engineering-lead.md  pm.md  research-lead.md  researcher.md  reviewer.md  sde1.md  sde2.md  sde3.md
agentorg/constitution/: budget-governor.md  escalation-protocol.md
agentorg/schemas/: README.md  adr.md  blocked.md  deployment-brief.md  deployment-report.md  engineering-completion-report.md  finding.md  init-context.md  prd.md  research-brief.md  research-output-manifest.md  review-report.md  task-breakdown.md
agentorg/templates/: CLAUDE.md  objective.template.md
tests/: test_init_flow.py  test_scaffold.py  test_validator.py
