[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentorg"
version = "0.2.0"
description = "Multi-agent development system built on Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.3.3",
    "pyyaml>=6.0.3",
    "anthropic>=0.101.0,<1.0",
]

[project.scripts]
agentorg = "agentorg.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4.4"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
agentorg = [
    "agents/*.md",
    "schemas/*.md",
    "templates/*",
    "constitution/*.md",
]
